  * Changes: Fix python broken pipe randomly happened for Popen
  * Changes: performance tests are run 5 times; 3 consistent values are considered
  * Changes: performance test optimization part1
  * Fixes: NB#291089 - Installation of clock application fails when applauncherd daemon stopped
  * Changes: Correct file path and dir path for applications started by booster-m

 -- Alexey Shilov <alexey.shilov@nokia.com>  Mon, 14 Nov 2011 13:39:38 +0200

applauncherd (2.0.16) stable; urgency=low

  * Fixes: NB#296154 - proprietary headers in applauncherd replaced to LGPL

 -- Thyagarajan Balakrishnan <ext-thyagarajan.1.balakrishnan@nokia.com>  Tue, 03 Jan 2012 15:50:58 +0200

applauncherd (2.0.15) stable; urgency=low

  * Fixes: NB#295360 - Report extended exit code from applifed/applauncher

 -- Juha Lintula <juha.lintula@nokia.com>  Wed, 21 Dec 2011 12:26:50 +0200

applauncherd (2.0.14) stable; urgency=low

  * Fixes: NB#288982 - COREWEB: booster '__assert_fail append_pending_request _XReply'
  * Changes: updated some test cases in art-tests and test package dependencies
  * Changes: improve perf test to detect failure

 -- Thyagarajan Balakrishnan <ext-thyagarajan.1.balarishnan@nokia.com>  Wed, 23 Nov 2011 17:50:32 +0200

applauncherd (2.0.13) stable; urgency=low

  * Fixes: NB#291039 - Integrated version of applauncherd is missing some important test cases
  * Changes: testcases added/fixed for code coverage

 -- Thyagarajan Balakrishnan <ext-thyagarajan.1.balarishnan@nokia.com>  Tue, 22 Nov 2011 11:27:40 +0200

applauncherd (2.0.12) stable; urgency=low

  * Changes: new test case added for /usr/lib trigger
  * fixes for nightly build test failures

 -- Dmitry Rozenshtein <ext-dmitry.2.rozenshtein@nokia.com>  Wed, 11 Nov 2011 14:30:21 +0200

applauncherd (2.0.11) stable; urgency=low

  * Fixes: NB#287488 - Boosted QML application startup time is above requirements

 -- Dmitry Rozenshtein <ext-dmitry.2.rozenshtein@nokia.com>  Wed, 09 Nov 2011 14:55:21 +0200
