@@ -1,8 +1,10 @@
+set(COMMON "${CMAKE_HOME_DIRECTORY}/src/common")
+
 # Set sources
-set(SRC invokelib.c invoker.c report.c search.c)
+set(SRC invokelib.c invoker.c ${COMMON}/report.c search.c)
 
 # Set include dirs
-include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_HOME_DIRECTORY}/src/common)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${COMMON})
 
 # Set precompiler flags
 add_definitions(-DPROG_NAME_INVOKER="invoker")
